added overloaded variants of existing methods